pkg/lang/testdata/ub/stack-values/invalid/input-reference-in-interpolation.ub
factory: {
  inputs: { s: $'v={{input.x}}' }
}
